--- a/index.html
+++ b/index.html
@@ -11,14 +11,45 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <!--JQuery-->
-    <!--  <script src="./node_modules/jquery/dist/jquery.js"></script> -->
     <!--Custom JS-->
     <!-- <script src="./js/script.js"></script> -->
-    <!--Custom CSS-->
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
 </head>
 <body>
-    <h1>Hello Project!</h1>
+    <div class="container">
+        <form action="">
+            <div class="row mt-5">
+                <h4>Basic Data</h4>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <input type="text" class="form-control" placeholder="Name">
+                </div>
+                <div class="col-3">
+                    <input type="text" class="form-control" placeholder="Last Name">
+                </div>
+                <div class="col-6">
+                    <input type="email" class="form-control" placeholder="Email">
+                </div>
+            </div>
+            <div class="row mt-3">
+                <h4>Data</h4>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <input type="text" class="form-control" placeholder="CEP" id="cep">
+                    <button class="btn btn-success" id="btn-buscar-cep">Search</button>
+                </div>
+                <div class="col-7">
+                    <input type="text" class="form-control" placeholder="Address" id="endereco">
+                </div>
+                <div class="col-2">
+                    <input type="number" class="form-control" placeholder="Number" name="number" id="number">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary mt-3">Send</button>
+        </form>
+    </div>
+    <script src="jquery.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
